Hopefully fixed google maps in large view and added spacing between header and body.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -212,7 +212,7 @@ html, body{
 
 /* Spacing between header and body */
 .space{
-  margin-top: 10px;
+  padding-top: 10px;
 }
 
 
